correct alignment issue on mobile device

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -80,7 +80,7 @@
     }
 
     .about__me {
-        width: 60%;
+        width: 46%;
         margin: 2rem auto 4rem;
     }
 
@@ -98,7 +98,12 @@
 @media screen and (max-width: 600px) {
     .about__me {
         width: 100%;
-        margin: 0 auto 4rem;
+        margin: 0 auto 3rem;
+    }
+
+    .about__me-image {
+        width: 340px;
+        height: 340px;
     }
 
     .about__cards {
@@ -118,5 +123,16 @@
     .about__me-image {
         max-width: 100%;
         max-height: 100%;
+    }
+}
+
+@media only screen and (width: 768px) {
+    .about__me {
+        width: 55%;
+        margin: 0 auto 3rem;
+    }
+
+    .about__me-image {
+        width: 100%;
     }
 }
